<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.fragment.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:maxLines="2"
                android:text="@string/create"
                android:textColor="?colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtHeading"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_person"
                    android:drawableRight="@drawable/ic_person"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/email_id"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_email"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="@string/gmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:windowSoftInputMode="adjustResize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/contact_no"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spinner2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:spinnerMode="dropdown" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_toEndOf="@id/spinner2"
                            android:layout_toRightOf="@id/spinner2"/>
<!--                            android:src="@drawable/ic_drop" />-->

                    </RelativeLayout>

                    <EditText
                        android:id="@+id/etNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/ic_phone"
                        android:drawableRight="@drawable/ic_phone"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorHint="@android:color/darker_gray" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_lock"
                    android:drawableRight="@drawable/ic_lock"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:windowSoftInputMode="adjustResize" />


                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txtCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:textColor="@color/black"
                        android:text="@string/permission" />

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/txtAlreadyAcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/already" />


        </RelativeLayout>

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>