<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.fragment.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:maxLines="2"
                android:text="@string/sign_in_to_your_naccount"
                android:textColor="?colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtHeading"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_id"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_email"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="@string/gmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_lock"
                    android:drawableRight="@drawable/ic_lock"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:windowSoftInputMode="adjustResize" />

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:background="?selectableItemBackground"
                    android:text="@string/forgot"
                    android:textStyle="bold"
                    android:textColor="?colorPrimary" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtLoginWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/login_with"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/llFBGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLoginWith"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/imgGoogle"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/auth_bg"
                    android:foreground="?selectableItemBackground"
                    android:src="@drawable/ic_google"
                    tools:targetApi="m" />

                <ImageView
                    android:id="@+id/imgFacebook"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/auth_bg"
                    android:foreground="?selectableItemBackground"
                    android:src="@drawable/ic_facebook"
                    tools:targetApi="m" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDontAcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llFBGoogle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/dontAcount" />


        </RelativeLayout>

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>